--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
   <link href="./output.css" rel="stylesheet">
   <script defer src="main.js"></script>
-  <html data-theme="corporate"></html>
+  <html data-theme="invincible_day"></html>
 </head>
 <body>
 
@@ -17,7 +17,7 @@
   <input id="my-drawer-2" type="checkbox" class="drawer-toggle" />
   <div class="drawer-content flex flex-col">
     <!-- Navbar -->
-    <div class="navbar bg-base-100 w-full">
+    <div class="navbar bg-base-100 w-full shadow">
       <div class="flex-none lg:hidden">
         <label for="my-drawer-2" aria-label="open sidebar" class="btn btn-square btn-ghost lg:hidden">
           <svg
@@ -36,23 +36,28 @@
         </label>
       </div>
       <div class="flex-1">
-      <a class="tab-button btn btn-ghost text-xs md:text-xl" tab-data="home">YOUNG INVINCIBLES</a>
-      <i class="hidden lg:inline text-xs truncate">YOUNG VOICES. TOGETHER, INVINCIBLE.</i>
+      <a class="tab-button btn btn-ghost text-xs" tab-data="home"><img class="w-26" src="./images/YI_Logo_Full.png" alt="Young Invincibles logo" /></a>
     </div>
       <div class="flex-none">
-        <ul class="menu menu-horizontal">
+        <ul class="menu menu-horizontal gap-2">
           <!-- Navbar menu content here -->
-          <li><a class="tab-button " tab-data="alerts">Alerts</a></li>
-          <li><a class="tab-button " tab-data="profile">Profile</a></li>
+          <li><span><input class="input input-sm w-28 sm:w-56" placeholder="Search" /></span></li>
+          <li></span>
+            <div class="indicator">
+            <span class="indicator-item badge badge-secondary badge-sm font-bold">2</span>
+              <a class="tab-button" tab-data="alerts"><svg class="size-7" stroke-width="1.5" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" color="#000000"><path d="M18 8.4C18 6.70261 17.3679 5.07475 16.2426 3.87452C15.1174 2.67428 13.5913 2 12 2C10.4087 2 8.88258 2.67428 7.75736 3.87452C6.63214 5.07475 6 6.70261 6 8.4C6 15.8667 3 18 3 18H21C21 18 18 15.8667 18 8.4Z" stroke="#000000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path><path d="M13.73 21C13.5542 21.3031 13.3019 21.5547 12.9982 21.7295C12.6946 21.9044 12.3504 21.9965 12 21.9965C11.6496 21.9965 11.3054 21.9044 11.0018 21.7295C10.6982 21.5547 10.4458 21.3031 10.27 21" stroke="#000000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path></svg></a>
+            </div>
+            </li>
+          <li><a class="tab-button" tab-data="profile"><svg class="bg-primary rounded-full outline-1 size-7" stroke-width="1.5" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" color="#000000"><path d="M5 20V19C5 15.134 8.13401 12 12 12V12C15.866 12 19 15.134 19 19V20" stroke="#000000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path><path d="M12 12C14.2091 12 16 10.2091 16 8C16 5.79086 14.2091 4 12 4C9.79086 4 8 5.79086 8 8C8 10.2091 9.79086 12 12 12Z" stroke="#000000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path></svg></a></li>
         </ul>
       </div>
     </div>
     <!-- Page content here -->
-    </label><div class="flex p-4 flex-col to- h-full" id="display"></div>
+    </label><div class="flex p-4 flex-col to- h-screen bg-base-300" id="display"></div>
   </div>
   <div class="drawer-side">
     <label for="my-drawer-2" aria-label="close sidebar" class="drawer-overlay"></label>
-    <ul class="menu bg-base-200 min-h-full w-80 p-4">
+    <ul class="menu bg-accent text-accent-content font-bold min-h-full w-80 p-4">
       <!-- Sidebar content here -->
       <li><a class="tab-button " tab-data="dashboard">Dashboard</a></li>
           <li><a class="tab-button" tab-data="activity">Activity</a></li>
@@ -67,38 +72,5 @@
   </div>
 </div>
   
-  
-
-    <div class="cursor-pointer fixed bottom-4 left-4">
-      <label class="flex cursor-pointer gap-2">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="20"
-          height="20"
-          viewBox="0 0 24 24"
-          fill="none"
-          stroke="currentColor"
-          stroke-width="2"
-          stroke-linecap="round"
-          stroke-linejoin="round">
-          <circle cx="12" cy="12" r="5" />
-          <path
-            d="M12 1v2M12 21v2M4.2 4.2l1.4 1.4M18.4 18.4l1.4 1.4M1 12h2M21 12h2M4.2 19.8l1.4-1.4M18.4 5.6l1.4-1.4" />
-        </svg>
-        <input type="checkbox" value="forest" class="toggle theme-controller" />
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="20"
-          height="20"
-          viewBox="0 0 24 24"
-          fill="none"
-          stroke="currentColor"
-          stroke-width="2"
-          stroke-linecap="round"
-          stroke-linejoin="round">
-          <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
-        </svg>
-      </label>
-		</div>
 </body>
 </html>
