Dashboard Completed & Layout Additions

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
         </label>
       </div>
       <div class="flex-1">
-      <a class="tab-button btn btn-ghost text-xs" tab-data="home"><img class="w-26" src="./images/YI_Logo_Full.png" alt="Young Invincibles logo" /></a>
+      <a class="tab-button btn btn-ghost text-xs w-36" tab-data="dashboard"><img class="object-contain" src="./images/YI_Logo_Full.png" alt="Young Invincibles logo" /></a>
     </div>
       <div class="flex-none">
         <ul class="menu menu-horizontal gap-2">
@@ -57,17 +57,19 @@
   </div>
   <div class="drawer-side">
     <label for="my-drawer-2" aria-label="close sidebar" class="drawer-overlay"></label>
-    <ul class="menu bg-accent text-accent-content font-bold min-h-full w-80 p-4">
+    <ul class="menu bg-accent text-accent-content font-bold min-h-full w-60 p-4 gap-2 text-lg">
       <!-- Sidebar content here -->
-      <li><a class="tab-button " tab-data="dashboard">Dashboard</a></li>
-          <li><a class="tab-button" tab-data="activity">Activity</a></li>
-          <li><a class="tab-button" tab-data="tasks">Tasks</a></li>
-          <li><a class="tab-button" tab-data="announcements">Announcements</a></li>
-          <li><a class="tab-button" tab-data="resources">Resources</a></li>
-          <li><a class="tab-button" tab-data="events">Events</a></li>
-          <li><a class="tab-button" tab-data="leaderboards">Leaderboards</a></li>
-          <li><a class="tab-button" tab-data="community">Career Community</a></li>
-          <li><a class="tab-button" tab-data="resources">Resources</a></li>
+      <li><a class="tab-button" tab-data="dashboard">Dashboard</a></li>
+        <li><a class="tab-button" tab-data="activity">Activity</a></li>
+        <li><a class="tab-button" tab-data="events">Events</a></li>
+        <div class="divider divider-primary divider-start text-sm m-0 cursor-default text-base-300">VISIBLE INVINCIBLES</div>
+        <li><a class="tab-button" tab-data="tasks">Tasks</a></li>
+        <li><a class="tab-button" tab-data="community">Career Community</a></li>
+        <li><a class="tab-button" tab-data="leaderboards">Leaderboards</a></li>
+        <li><a class="tab-button" tab-data="rewards">Rewards</a></li>
+        <div class="divider divider-primary divider-start text-sm m-0 cursor-default text-base-300">TOOLS</div>
+        <li><a class="tab-button" tab-data="resources">Resources</a></li>
+        <li><a class="tab-button" tab-data="faq">FAQ</a></li>
     </ul>
   </div>
 </div>
