--- a/src/index.html
+++ b/src/index.html
@@ -57,20 +57,79 @@
   </div>
   <div class="drawer-side">
     <label for="my-drawer-2" aria-label="close sidebar" class="drawer-overlay"></label>
-    <ul class="menu bg-accent text-accent-content font-bold min-h-full w-60 p-4 gap-2 text-lg">
-      <!-- Sidebar content here -->
-      <li><a class="tab-button" tab-data="dashboard">Dashboard</a></li>
-        <li><a class="tab-button" tab-data="activity">Activity</a></li>
-        <li><a class="tab-button" tab-data="events">Events</a></li>
-        <div class="divider divider-primary divider-start text-sm m-0 cursor-default text-base-300">VISIBLE INVINCIBLES</div>
-        <li><a class="tab-button" tab-data="tasks">Tasks</a></li>
-        <li><a class="tab-button" tab-data="community">Career Community</a></li>
-        <li><a class="tab-button" tab-data="leaderboards">Leaderboards</a></li>
-        <li><a class="tab-button" tab-data="rewards">Rewards</a></li>
-        <div class="divider divider-primary divider-start text-sm m-0 cursor-default text-base-300">TOOLS</div>
-        <li><a class="tab-button" tab-data="resources">Resources</a></li>
-        <li><a class="tab-button" tab-data="faq">FAQ</a></li>
-    </ul>
+<ul class="menu bg-accent text-accent-content font-bold min-h-full w-60 p-4 gap-2 text-lg">
+  <!-- Sidebar content here -->
+  <li>
+    <a class="tab-button flex items-center gap-3" tab-data="dashboard">
+      <img src="./images/dashboardicon.png" alt="" class="w-5 h-5 shrink-0 opacity-80">
+      Dashboard
+    </a>
+  </li>
+
+  <li>
+    <a class="tab-button flex items-center gap-3" tab-data="activity">
+      <img src="./images/activityicon.png" alt="" class="w-5 h-5 shrink-0 opacity-80">
+      Activity
+    </a>
+  </li>
+
+  <li>
+    <a class="tab-button flex items-center gap-3" tab-data="events">
+      <img src="./images/eventsicon.png" alt="" class="w-5 h-5 shrink-0 opacity-80">
+      Events
+    </a>
+  </li>
+
+  <div class="divider divider-primary divider-start text-sm m-0 cursor-default text-base-300">
+    VISIBLE INVINCIBLES
+  </div>
+
+  <li>
+    <a class="tab-button flex items-center gap-3" tab-data="tasks">
+      <img src="./images/tasksicon.png" alt="" class="w-5 h-5 shrink-0 opacity-80">
+      Tasks
+    </a>
+  </li>
+
+  <li>
+    <a class="tab-button flex items-center gap-3" tab-data="community">
+      <img src="./images/communityicon.png" alt="" class="w-5 h-5 shrink-0 opacity-80">
+      Career Community
+    </a>
+  </li>
+
+  <li>
+    <a class="tab-button flex items-center gap-3" tab-data="leaderboards">
+      <img src="./images/leaderboardsicon.png" alt="" class="w-5 h-5 shrink-0 opacity-80">
+      Leaderboards
+    </a>
+  </li>
+
+  <li>
+    <a class="tab-button flex items-center gap-3" tab-data="rewards">
+      <img src="./images/rewardsicon.png" alt="" class="w-5 h-5 shrink-0 opacity-80">
+      Rewards
+    </a>
+  </li>
+
+  <div class="divider divider-primary divider-start text-sm m-0 cursor-default text-base-300">
+    TOOLS
+  </div>
+
+  <li>
+    <a class="tab-button flex items-center gap-3" tab-data="resources">
+      <img src="./images/resourcesicon.png" alt="" class="w-5 h-5 shrink-0 opacity-80">
+      Resources
+    </a>
+  </li>
+
+  <li>
+    <a class="tab-button flex items-center gap-3" tab-data="faq">
+      <img src="./images/faqicon.png" alt="" class="w-5 h-5 shrink-0 opacity-80">
+      FAQ
+    </a>
+  </li>
+</ul>
   </div>
 </div>
   
